use overlapping grid instead of absolute to fix signup page responsiveness issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -194,17 +194,17 @@ a {
 
 .auth-background {
     background:
-        linear-gradient(to bottom, transparent, (--light-color)),
+        linear-gradient(to bottom, (--light-color), transparent),
         url('../images/texture_background.webp') no-repeat center center / cover;
     grid-area: background-area;
 }
 
 .auth-content-wrapper {
-    position: absolute;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    place-self: center;
     width: 80%;
     min-height: 80%;
-    top: 10%;
-    left: 10%;
     background-color: rgba(var(--light-color-rgb), 0.4);
     backdrop-filter: blur(2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -1186,6 +1186,9 @@ footer a {
     }
 
     .auth-content-wrapper {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+        place-self: center;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: auto;
         grid-template-areas: "site-logo auth-content";
